--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "type": "git"
   },
   "author": "Eric Yang <ericyang321@gmail.com>",
-  "license": "Apache-2.0",
+  "license": "MIT",
   "devDependencies": {
     "@babel/core": "7.0.0-beta.42",
     "@babel/preset-env": "7.0.0-beta.42",
